--- a/assigntment-1/index.html
+++ b/assigntment-1/index.html
@@ -68,7 +68,7 @@
         <div class="card" id="card6">
           <img src="/assets/foto6.jpeg" alt="Image 6" />
           <h2>Dog</h2>
-          <p>description .</p>
+          <p>description</p>
           <button id="button">Read More</button>
         </div>
       </div>
